[package]
name = "esi-markets"
version = "0.1.0"
authors = ["Sebastian <info@zweizeichen.org>"]

[dependencies]
bincode = "1.0"
bytes = "0.4"
chrono = "0.4"
crossbeam-channel = "0.2"
env_logger = "0.5"
error-chain = "0.12"
fern = "0.5"
flate2 = "1.0"
fnv = "1.0"
log = "0.4"
parking_lot = "0.6"
prost = "0.4"
prost-derive = "0.4"
prost-types = "0.4"
rand = "0.5"
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"

#
# gRPC crates
#

futures = "0.1"
http = "0.1"
tokio-core = "0.1"
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc" }
tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }
tower-http = { git = "https://github.com/tower-rs/tower-http" }
tower-service = { git = "https://github.com/tower-rs/tower" }

[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc" }

[dependencies.ctrlc]
version = "3.1"
features = ["termination"]
