[package]
name = "esi-markets"
version = "0.3.0"
authors = ["Sebastian <info@zweizeichen.org>"]
edition = "2018"

[dependencies]
bincode = "1.2"
bytes = "0.5"
chrono = "0.4"
crossbeam-channel = "0.4"
env_logger = "0.7"
error-chain = "0.12"
fern = "0.6"
flate2 = "1.0"
fnv = "1.0"
log = "0.4"
parking_lot = "0.10"
prost-derive = "0.6"
prost-types = "0.6"
rand = "0.7"
reqwest = {version = "0.10", features = ["blocking", "gzip"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"

#
# gRPC crates
#
tonic = "0.1"
prost = "0.6"
tokio = { version = "0.2", features = ["macros", "sync", "stream", "time"] }
futures = "0.3"
async-stream = "0.2"

[build-dependencies]
tonic-build = { version = "0.1", default-features = false, features = ["transport"] }

[dependencies.ctrlc]
version = "3.1"
features = ["termination"]
